--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#262626" />
+		<meta name="description" content="Your favorite radio and podcast player" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/pwa-192x192.png" />
+		<link rel="mask-icon" href="%sveltekit.assets%/pwa-192x192-maskable.png" color="#262626" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
