SEO add lang meta tags and remove duplicate description

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="x-default">
 
 <head>
 	<meta charset="utf-8" />
@@ -7,7 +7,6 @@
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="theme-color" content="#262626" />
-	<meta name="description" content="Your favorite radio and podcast player" />
 	<link rel="apple-touch-icon" href="%sveltekit.assets%/pwa-192x192.png" />
 	<link rel="mask-icon" href="%sveltekit.assets%/pwa-192x192-maskable.png" color="#262626" />
 	%sveltekit.head%
